Import of WWOLF/App-Notes-0.002 from CPAN.
gitpan-cpan-distribution: App-Notes
gitpan-cpan-version:      0.002
gitpan-cpan-path:         WWOLF/App-Notes-0.002.tar.gz
gitpan-cpan-author:       WWOLF
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -25,5 +25,6 @@ requires:
   warnings: 0
 resources:
   bugtracker: https://github.com/throughnothing/App-Notes/issues
+  homepage: http://metacpan.org/release/App-Notes/
   repository: git://github.com/throughnothing/App-Notes.git
-version: 0.001
+version: 0.002
