--- a/META.yml
+++ b/META.yml
@@ -2,6 +2,7 @@
 abstract: 'Simple. Git-based. Notes.'
 author:
   - 'William Wolf <throughnothing@gmail.com>'
+  - 'Naveed Massjouni <naveedm9@gmail.com>'
 build_requires:
   File::Find: 0
   File::Temp: 0
@@ -27,4 +28,4 @@ resources:
   bugtracker: https://github.com/throughnothing/App-Notes/issues
   homepage: http://metacpan.org/release/App-Notes/
   repository: git://github.com/throughnothing/App-Notes.git
-version: 0.002
+version: 0.003
