Import of WWOLF/App-Notes-0.010 from CPAN.
gitpan-cpan-distribution: App-Notes
gitpan-cpan-version:      0.010
gitpan-cpan-path:         WWOLF/App-Notes-0.010.tar.gz
gitpan-cpan-author:       WWOLF
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -20,6 +20,7 @@ requires:
   App::Rad: 0
   Capture::Tiny: 0
   Git::Repository: 0
+  List::MoreUtils: 0
   Path::Class: 0
   perl: v5.10.0
   strict: 0
@@ -28,4 +29,4 @@ resources:
   bugtracker: https://github.com/throughnothing/App-Notes/issues
   homepage: http://metacpan.org/release/App-Notes/
   repository: git://github.com/throughnothing/App-Notes.git
-version: 0.009
+version: 0.010
